--- a/simple-chat-jsf/chat-web/src/main/webapp/public/registration.xhtml
+++ b/simple-chat-jsf/chat-web/src/main/webapp/public/registration.xhtml
@@ -1,103 +1,119 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	template="/templates/masterLayout.xhtml">
-	<ui:define name="pageTitle">Registration</ui:define>
-	<ui:define name="content">
-		<div class="row">
-			<div class="col-sm-6 col-sm-offset-3">
-				<div class="panel panel-default">
-					<div class="panel-heading top-bar">
-						<div class="col-md-8 col-xs-8">
-							<h3 class="panel-title">
-								<span class="glyphicon glyphicon-plus-sign"></span> Registration
-							</h3>
-						</div>
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:f="http://java.sun.com/jsf/core"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/templates/masterLayout.xhtml">
 
-					</div>
-					<div class="panel-body ">
-						<h:form id="registratonForm" styleClass="form-horizontal" enctype="multipart/form-data">
-							<div class="form-group">
-								<h:outputLabel value="Username:" for="username"
-									styleClass="control-label col-sm-2" />
-								<div class="col-sm-10">
-									<p:inputText id="username"
-										value="#{registrationView.userVo.username}" required="true" />
-								</div>
-								<div class="col-sm-12">
-									<p:message for="username" />
-								</div>
-							</div>
-							<div class="form-group">
-								<h:outputLabel value="Email" for="email"
-									styleClass="control-label col-sm-2" />
-								<div class="col-sm-10">
-									<p:inputText id="email"
-										value="#{registrationView.userVo.email}" required="true" />
-								</div>
-								<div class="col-sm-12">
-									<p:message for="email" />
-								</div>
-							</div>
-							<div class="form-group">
-								<h:outputLabel value="Fisrt Name" for="firstname"
-									styleClass="control-label col-sm-2" />
-								<div class="col-sm-10">
-									<p:inputText id="firstname"
-										value="#{registrationView.userVo.firstName}" required="true" />
-								</div>
-								<div class="col-sm-12">
-									<p:message for="firstname" />
-								</div>
-							</div>
-							<div class="form-group">
-								<h:outputLabel value="Last name" for="lastname"
-									styleClass="control-label col-sm-2" />
-								<div class="col-sm-10">
-									<p:inputText id="lastname"
-										value="#{registrationView.userVo.lastName}" required="true" />
-								</div>
-								<div class="col-sm-12">
-									<p:message for="lastname" />
-								</div>
-							</div>
-							<div class="form-group">
-								<h:outputLabel value="Password" for="password"
-									styleClass="control-label col-sm-2" />
-								<div class="col-sm-10">
-									<p:password id="password"
-										value="#{registrationView.userVo.password}" required="true">
-										<f:validateLength minimum="6"></f:validateLength>
-									</p:password>
-								</div>
-								<div class="col-sm-12">
-									<p:message for="password" />
-								</div>
-							</div>
-								<div class="form-group">
-								<h:outputLabel value="Upload a photo" for="image"
-									styleClass="control-label col-sm-2" />
-								<div class="col-sm-10" id="image">
-    								<p:fileUpload allowTypes="*.jpg;*.png" id="image" mode="simple" skinSimple="true" value="#{registrationView.userVo.image}"/>
-								</div>
-								<div class="col-sm-12">
-									  <p:growl id="messages" showDetail="true" />
-								</div>
-							</div>
-							<div class="form-group">
-								<div class="col-sm-offset-2 col-sm-10">
-									<p:commandButton value="Registration"
-										styleClass="btn btn-default"
-										actionListener="#{registrationView.registration()}"></p:commandButton>
-								</div>
-							</div>
-						</h:form>
-					</div>
-				</div>
-			</div>
-		</div>
+    <ui:define name="pageTitle">#{out['title.registration']}</ui:define>
 
-	</ui:define>
+    <ui:define name="content">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading top-bar">
+                        <div class="col-md-8 col-xs-8">
+                            <h3 class="panel-title">
+                                <span class="glyphicon glyphicon-plus-sign" />
+                                <h:outputText value="#{out['signup']}" />
+                            </h3>
+                        </div>
+                    </div>
+
+                    <div class="panel-body">
+                        <h:form id="registratonForm" styleClass="form-horizontal" enctype="multipart/form-data">
+                            <div class="form-group">
+                                <h:outputLabel value="#{out.username}:" for="username" styleClass="control-label col-sm-2" />
+
+                                <div class="col-sm-10">
+                                    <p:inputText id="username" value="#{registrationView.userVo.username}" required="true" />
+                                </div>
+
+                                <div class="col-sm-12">
+                                    <p:message for="username" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <h:outputLabel value="#{out.email}" for="email" styleClass="control-label col-sm-2" />
+
+                                <div class="col-sm-10">
+                                    <p:inputText id="email" value="#{registrationView.userVo.email}" required="true" />
+                                </div>
+
+                                <div class="col-sm-12">
+                                    <p:message for="email" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <h:outputLabel value="#{out.firstName}" for="firstname" styleClass="control-label col-sm-2" />
+
+                                <div class="col-sm-10">
+                                    <p:inputText id="firstname" value="#{registrationView.userVo.firstName}" required="true" />
+                                </div>
+
+                                <div class="col-sm-12">
+                                    <p:message for="firstname" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <h:outputLabel value="#{out.lastName}" for="lastname" styleClass="control-label col-sm-2" />
+
+                                <div class="col-sm-10">
+                                    <p:inputText id="lastname" value="#{registrationView.userVo.lastName}" required="true" />
+                                </div>
+
+                                <div class="col-sm-12">
+                                    <p:message for="lastname" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <h:outputLabel value="#{out.password}" for="password" styleClass="control-label col-sm-2" />
+
+                                <div class="col-sm-10">
+                                    <p:password id="password" value="#{registrationView.userVo.password}" required="true">
+                                        <f:validateLength minimum="6" />
+                                    </p:password>
+                                </div>
+
+                                <div class="col-sm-12">
+                                    <p:message for="password" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <h:outputLabel value="#{out.uploadPhoto}" for="imageUpload" styleClass="control-label col-sm-2" />
+
+                                <div class="col-sm-10">
+                                    <p:fileUpload id="imageUpload"
+                                                  value="#{registrationView.uploadedFile}"
+                                                  fileUploadListener="#{registrationView.imageUpload}"
+                                                  dragDropSupport="true"
+                                                  mode="advanced"
+                                                  auto="true"
+                                                  allowTypes="/(\.|\/)(gif|jpe?g|png)$/" />
+                                </div>
+
+                                <div class="col-sm-12">
+                                    <p:growl id="messages" showDetail="true" life="5000" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <div class="col-sm-offset-2 col-sm-10">
+                                    <p:commandButton value="#{out.signup}"
+                                                     actionListener="#{registrationView.register()}"
+                                                     ajax="false"
+                                                     styleClass="btn btn-default" />
+                                </div>
+                            </div>
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ui:define>
 </ui:composition>
