--- a/simple-chat-jsf/chat-web/src/main/webapp/public/users.xhtml
+++ b/simple-chat-jsf/chat-web/src/main/webapp/public/users.xhtml
@@ -1,38 +1,45 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets"
-	xmlns:p="http://primefaces.org/ui"
-	template="/templates/masterLayout.xhtml"
-	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:sec="http://www.springframework.org/security/tags">
-	<ui:define name="head-extra">
-		<!-- custom css -->
-	</ui:define>
-	<ui:define name="pageTitle">Users</ui:define>
-	<ui:define name="content">
-		<div class="row">
-			<div class="col-sm-6 col-sm-offset-3">
-				<div class="panel panel-default">
-					<div class="panel-heading top-bar">
-						<div class="col-md-8 col-xs-8">
-							<h3 class="panel-title">
-								<span class="glyphicon glyphicon-plus-sign"></span> Users
-							</h3>
-						</div>
+                xmlns:h="http://java.sun.com/jsf/html"
+                xmlns:ui="http://java.sun.com/jsf/facelets"
+                xmlns:p="http://primefaces.org/ui"
+                template="/templates/masterLayout.xhtml">
 
-					</div>
-					<div class="panel-body ">
-						<p:dataTable var="user" value="#{usersView.users}">
-							<p:column headerText="UsreName">
-								<h:outputText value="#{user.username}"/>
-							</p:column>
-						</p:dataTable>
-					</div>
-				</div>
-			</div>
+    <ui:define name="pageTitle">#{out.users}</ui:define>
 
+    <ui:define name="head-extra">
+        <!-- custom css -->
+    </ui:define>
 
-		</div>
-	</ui:define>
+    <ui:define name="content">
+        <div class="row">
+            <div class="col-sm-6 col-sm-offset-3">
+                <div class="panel panel-default">
+                    <div class="panel-heading top-bar">
+                        <div class="col-md-8 col-xs-8">
+                            <h3 class="panel-title">
+                                <span class="glyphicon glyphicon-plus-sign" />
+                                <h:outputText value="#{out.users}" />
+                            </h3>
+                        </div>
+                    </div>
+
+                    <div class="panel-body">
+                        <h:form>
+                            <p:dataTable var="user" value="#{usersView.users}" rowStyleClass="user #{user.active ? 'active' : ''}">
+                                <p:column headerText="#{out.username}" filterBy="#{user.username} #{user.fullName}" filterMatchMode="contains">
+                                    <h:outputText value="#{user.fullName}" />
+                                </p:column>
+
+                                <p:column headerText="#{out.image}">
+                                    <p:graphicImage rendered="#{empty user.imageUrl}" value="/image/#{user.id}" styleClass="user-image" />
+
+                                    <p:graphicImage rendered="#{not empty user.imageUrl}" value="#{user.imageUrl}" styleClass="user-image" />
+                                </p:column>
+                            </p:dataTable>
+                        </h:form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ui:define>
 </ui:composition>
